# open-web-server

./: .gitignore  CLAUDE.md  Cargo.toml  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.md  domains.toml.example  install.ps1  install.sh  redirects.toml.example  web_vhosts.toml.example
.github/workflows/: release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/tokyo/runo/openwebserver/: DdnsSetupActivity.kt  HardwareAccelDetector.kt  MainActivity.kt  PowerProfile.kt  ProfileSelectActivity.kt  SecureDdnsStore.kt
android/app/src/main/res/drawable/: ic_launcher_alwayson.xml  ic_launcher_memorysaver.xml  ic_launcher_normal.xml  ic_launcher_powersave.xml
android/app/src/main/res/layout/: activity_ddns_setup.xml  activity_main.xml  activity_profile_select.xml
android/app/src/main/res/layout-sw600dp/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
crates/open-web-server-core/: Cargo.toml
crates/open-web-server-core/src/: lib.rs
crates/open-web-server-gateway/: Cargo.toml
crates/open-web-server-gateway/src/: access_log.rs  acme.rs  app_proxy.rs  compression.rs  custom_dns.rs  ddns.rs  dual_write.rs  free_domain.rs  keyring.rs  main.rs  oauth_provider.rs  php_fastcgi.rs  php_server.rs  proxy.rs  redirects.rs  response.rs  sftp.rs  state.rs  static_files.rs  telemetry.rs  tenant_router.rs  upnp.rs  web_vhost.rs
crates/open-web-server-gateway/src/handlers/: free_domain.rs  items.rs  keys.rs  mod.rs  redirects.rs  sftp_info.rs  state_query.rs  tenants.rs  tls.rs  transactions.rs  wal.rs  web_vhost.rs
crates/open-web-server-gateway/src/middleware/: cors.rs  idempotency.rs  mod.rs
crates/open-web-server-ledger/: Cargo.toml
crates/open-web-server-ledger/src/: audit_log.rs  lib.rs  multi_region.rs  postgres_wal.rs  state_reader.rs
crates/open-web-server-wire/: Cargo.toml
crates/open-web-server-wire/src/: accel.rs  auth.rs  lib.rs  mptcp_channel.rs  payload_crypto.rs  quic_channel.rs  replay_guard.rs  tls.rs  udp_channel.rs
docs/: HYBRID_NETWORK_ARCHITECTURE.md  architecture.md  integration.md  tls-tenant.md
docs/i18n/hybrid-network/: INDEX.md  README.Arabic.md  README.Chinese.md  README.English.md  README.France.md  README.Germany.md  README.Italy.md  README.Japan.md  README.Korea.md  README.Russia.md  README.Spain.md
site/: index.html
