[package]
name = "open-web-server-core"
description = "open-web-server: ドメインモデル・共通型・エラー定義"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
