[package]
name = "open-web-server-gateway"
description = "open-web-server: tokio/hyper 自前実装 Webゲートウェイ (REST/GraphQL/3D Game API 前段)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "open-web-server"
path = "src/main.rs"

[dependencies]
open-web-server-core = { path = "../open-web-server-core" }
open-web-server-wire = { path = "../open-web-server-wire" }
open-web-server-ledger = { path = "../open-web-server-ledger" }
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["testing"] }
