[package]
name = "open-web-server-gateway"
description = "open-web-server: tokio/hyper 自前実装 Webゲートウェイ (REST/GraphQL/3D Game API 前段)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "open-web-server"
path = "src/main.rs"

[dependencies]
open-web-server-core = { path = "../open-web-server-core" }
open-web-server-wire = { path = "../open-web-server-wire" }
open-web-server-ledger = { path = "../open-web-server-ledger" }
tokio.workspace = true
tokio-rustls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true
# ACME(acme feature)向け。デフォルトfeatureには含めない依存を分離するため
# 個別に宣言(rcgenはTLSテスト・ACME CSR生成の両方で使うため常時)。
rcgen.workspace = true
reqwest = { workspace = true, optional = true }
ring = { workspace = true, optional = true }

[features]
default = []
# RFC 8555 HTTP-01によるACME自動証明書取得(`acme.rs`のクライアント本体)。
acme = ["dep:reqwest", "dep:ring"]

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["testing"] }
