[package]
name = "open-web-server-gateway"
description = "open-web-server: tokio/hyper 自前実装 Webゲートウェイ (REST/GraphQL/3D Game API 前段)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "open-web-server"
path = "src/main.rs"

[dependencies]
open-web-server-core = { path = "../open-web-server-core" }
open-web-server-wire = { path = "../open-web-server-wire" }
open-web-server-ledger = { path = "../open-web-server-ledger" }
tokio.workspace = true
tokio-rustls.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
http.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
# Nginx互換のgzip圧縮(compression.rs、2026-07-23新設)。
flate2 = "1.0"
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
async-trait.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true
# ACME(acme feature)向け。デフォルトfeatureには含めない依存を分離するため
# 個別に宣言(rcgenはTLSテスト・ACME CSR生成の両方で使うため常時)。
rcgen.workspace = true
reqwest = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
# 組み込みSFTPサーバー(sftp feature)向け。pure-Rust SSH/SFTP実装
# (外部sshd/vsftpdに依存しない、既存の「単一バイナリで完結する」設計思想に
# 合わせる)。activeにメンテナンスされていることを2026-07時点でcrates.io/
# GitHub上で確認済み。
russh = { version = "0.45", optional = true }
russh-sftp = { version = "2", optional = true }
# UPnP IGD自動ポート開放(upnp feature)向け。`igd`の後継で活発にメンテ
# されている`igd-next`を採用(2026-07時点でcrates.io確認済み)。
igd-next = { version = "0.15", optional = true, features = ["aio_tokio"] }
# 自社ドメイン(aon.co.jp/runo.tokyo)配下の無料サブドメイン発行機能
# (custom_domain feature)向け。DnsProvider実装(Value-Domain/ConoHa DNS)の
# 実HTTP呼び出し、およびGitHub OAuthのトークン交換に使う。
sqlx = { workspace = true, optional = true }

[features]
default = []
# RFC 8555 HTTP-01によるACME自動証明書取得(`acme.rs`のクライアント本体)。
acme = ["dep:reqwest", "dep:ring"]
# 固定IPを持たない自宅サーバー等向けの簡易DDNS更新(`ddns.rs`)。
ddns = ["dep:reqwest"]
# 組み込みSFTPサーバー(`sftp.rs`)。既定オフ、`OPEN_WEB_SERVER_SFTP_BIND`で有効化。
sftp = ["dep:russh", "dep:russh-sftp"]
# UPnP IGDによるポート自動開放の補助機能(`upnp.rs`)。既定オフ、
# `OPEN_WEB_SERVER_UPNP_AUTO_FORWARD=true`で有効化。
upnp = ["dep:igd-next"]
# 自社ドメイン(aon.co.jp/runo.tokyo)配下の無料サブドメイン発行+自動更新
# (`custom_dns.rs`)、GitHub等OAuthログイン(`oauth_provider.rs`)、
# PostgreSQL/aruaru-dbデュアルライト(`dual_write.rs`)。
custom_domain = ["dep:reqwest"]
# 上記のうちPostgreSQL側の実書き込み経路のみを追加で有効化する(`sqlx`は
# 比較的重量な依存のため、DnsProvider/AuthProviderのロジック単体は
# `custom_domain` featureのみで検証できるよう分離した)。
custom_domain_db = ["custom_domain", "dep:sqlx"]

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["testing"] }
# free_domain.rs(DuckDNS連携)のHTTPクライアント呼び出しロジックを、
# 実サービスへ接続せずモックサーバーで検証するため。
wiremock = "0.6"
