[package]
name = "open-web-server-wire"
description = "open-web-server: 3層防御の伝送路 (TLS + 相互認証 + ペイロード暗号化)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true

# 第1層: 伝送路暗号化 (TLS 1.3)
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true

# 第2層: 相互認証
rand.workspace = true
subtle.workspace = true
sha2.workspace = true

# 第3層: アプリケーション層ペイロード暗号化 (AEAD)
chacha20poly1305.workspace = true
hkdf.workspace = true
