[package]
name = "open-web-server-wire"
description = "open-web-server: 3層防御の伝送路 (TLS + 相互認証 + ペイロード暗号化)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
open-web-server-core = { path = "../open-web-server-core" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true

# 第1層: 伝送路暗号化 (TLS 1.3)
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true

# 第2層: 相互認証
rand.workspace = true
subtle.workspace = true
sha2.workspace = true
hmac.workspace = true

# 第3層: アプリケーション層ペイロード暗号化 (AEAD)
chacha20poly1305.workspace = true
hkdf.workspace = true

# 通信層の四重化 第3伝送路: QUIC (quinn)
quinn.workspace = true
rcgen.workspace = true

# 通信層の四重化 第4伝送路: カーネルMPTCP/SCTPはこのWindows開発環境では
# 実現不可能なため(mptcp_channel.rs のモジュールdoc参照)、同じ目的
# (物理経路マルチホーミングによる伝送路冗長化)をユーザー空間で実現する
# aggligator を使用する(公式ドキュメントいわく "serves the same purpose
# as Multipath TCP and SCTP... completely implemented in user space")。
aggligator = "0.9"
aggligator-transport-tcp = { version = "0.2", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
chrono.workspace = true
